fix alignment

--- a/src/app/phase-team-response/phase-team-response.component.css
+++ b/src/app/phase-team-response/phase-team-response.component.css
@@ -24,11 +24,6 @@
   pointer-events: auto;
 }
 
-.align-header {
-  display: flex;
-  align-items: baseline;
-}
-
 .mat-expansion-panel-header-title {
   font-size: x-large;
   align-self: center;
